comit actualizado para continuar

--- a/portfolioBack/src/main/resources/application.properties
+++ b/portfolioBack/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost/portfolio?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #mostrar sentencias SQL en la consola
 spring.jpa.show-sql = true
 
